# CodeSlicer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  START_HERE_FOR_ARTEM.md  docker-compose.yml  pyproject.toml
benchmarks/: README.md  endpoint_bridge_report.json  library_rule_breakdown.json  mutation_report.json  resolution_rule_breakdown.json  self_analysis_before_after.json  source_level_benchmark_summary.json  sprint4_benchmark_summary.json  sprint4_determinism_report.json  sprint4_support_pack_registry_report.json  sprint4_typescript_rule_breakdown.json  support_pack_edge_report.json  typescript_extraction_breakdown.json
docs/: ACCEPTANCE_REPORT.md  AI_LIBRARY_RESEARCHER_PROTOCOL.md  ARCHITECTURE.md  DOCKER.md  FACT_AND_RESOLVED_LAYERS.md  FORBIDDEN_SHORTCUTS.md  GETTING_STARTED.md  GRAPHIFY_INTEGRATION.md  GRAPH_SCHEMA.md  IMPACT_ENGINE_SKILLS.md  IMPACT_SCORING.md  LIBRARY_SUPPORT_PACKS.md  LIMITATIONS.md  MCP.md  QUALITY_GATES.md  (+9 more)
external_tools/ai_library_researcher_pro/: README.md  pyproject.toml
external_tools/ai_library_researcher_pro/ai_library_researcher_pro/: __init__.py  cli.py  extractor.py  fetcher.py  generator.py  models.py  report.py  safety.py  search.py  storage.py  support_pack_schema.py  validator.py  workflow.py
external_tools/ai_library_researcher_pro/fixtures/: good_support_pack.json
external_tools/ai_library_researcher_pro/fixtures/pages/: fastapi_fixture.html  react_fixture.md
external_tools/ai_library_researcher_pro/fixtures/sample_project/docs/: fastapi_offline.md
external_tools/ai_library_researcher_pro/tests/: test_cli.py  test_extractor_generator_validator.py  test_fetcher.py  test_no_impact_imports.py  test_search.py  test_workflow.py
tests/fixtures/qa_matrix/fullstack_react_ts_python/backend/: pyproject.toml
tests/fixtures/qa_matrix/fullstack_react_ts_python/backend/app/: __init__.py  main.py
tests/fixtures/qa_matrix/fullstack_react_ts_python/backend/app/api/: __init__.py  router.py
tests/fixtures/qa_matrix/fullstack_react_ts_python/backend/app/api/shop/: __init__.py  orders.py  users.py
tests/fixtures/qa_matrix/fullstack_react_ts_python/backend/app/repositories/: orders.py
tests/fixtures/qa_matrix/fullstack_react_ts_python/backend/app/services/: orders.py
tests/fixtures/qa_matrix/fullstack_react_ts_python/backend/tests/: test_orders_api.py
tests/fixtures/qa_matrix/polyglot_microservices/services/orders-python/: pyproject.toml
tests/fixtures/qa_matrix/polyglot_microservices/services/orders-python/app/: __init__.py  api.py  main.py  repository.py  service.py
tests/fixtures/qa_matrix/polyglot_microservices/services/orders-python/tests/: test_orders.py
tests/fixtures/qa_matrix/python_fastapi_uow_backend/: README.md  pyproject.toml  qa_matrix.json
tests/fixtures/qa_matrix/python_fastapi_uow_backend/app/: __init__.py  dependencies.py  main.py  uow.py
tests/fixtures/qa_matrix/python_fastapi_uow_backend/app/api/: __init__.py  router.py
tests/fixtures/qa_matrix/python_fastapi_uow_backend/app/api/v1/: __init__.py  orders.py  router.py  users.py
tests/fixtures/qa_matrix/python_fastapi_uow_backend/app/repositories/: __init__.py  billing.py  orders.py  users.py
tests/fixtures/qa_matrix/python_fastapi_uow_backend/app/services/: __init__.py  audit.py  orders.py  payments.py
tests/fixtures/qa_matrix/python_fastapi_uow_backend/tests/: conftest.py  test_checkout_flow.py  test_order_service.py  test_orders_api.py
tests/fixtures/qa_matrix/unknown_library_workflow/: README.md  pyproject.toml  qa_matrix.json  requirements.txt
tests/fixtures/qa_matrix/unknown_library_workflow/app/: main.py
tests/fixtures/qa_matrix/unknown_library_workflow/app/integrations/: magicqueue.py  strangebus.py
tests/fixtures/qa_matrix/unknown_library_workflow/app/repositories/: orders.py
tests/fixtures/qa_matrix/unknown_library_workflow/app/services/: orders.py  workflow.py
tests/fixtures/qa_matrix/unknown_library_workflow/tests/: conftest.py  test_workflow.py
tests/fixtures/qa_matrix/unknown_library_workflow/tests/stubs/: magicqueue.py  strangebus.py
tests/fixtures/qa_matrix/unknown_library_workflow/tests/stubs/internal_utils_dev/: __init__.py
(+544 files in other folders)
