[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-library-researcher-pro"
version = "0.1.0"
description = "Standalone AI Library Researcher workflow for conservative support pack drafts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Impact Engine Researcher Module"}]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["ai_library_researcher_pro*"]
